<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="48dp"
        tools:context=".SearchFragment">

        <EditText
            android:id="@+id/eText_search_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="100"
            android:inputType="textPersonName"
            android:hint="@string/eText_search_byName" />


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkBox_search_f1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f1" />
                <CheckBox
                    android:id="@+id/checkBox_search_f2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f2" />
                <CheckBox
                    android:id="@+id/checkBox_search_f3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f3" />
                <CheckBox
                    android:id="@+id/checkBox_search_f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkBox_search_f5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f5" />
                <CheckBox
                    android:id="@+id/checkBox_search_f6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f6" />
                <CheckBox
                    android:id="@+id/checkBox_search_f7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_search_f7" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_marginTop="24dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:text="@string/tView_search_and_or" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/rButton_search_or">
            <RadioButton
                android:id="@+id/rButton_search_or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rButton_search_or"/>
            <RadioButton
                android:id="@+id/rButton_search_and"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rButton_search_and"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:layout_gravity="center"
            android:text="@string/button_search" />

    </LinearLayout>

</ScrollView>