<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddSiteActivity">

        <TextView
            android:id="@+id/tView_addSite_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/tView_addSite_name" />

        <EditText
            android:id="@+id/eText_addSite_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:ems="100"
            android:inputType="textPersonName"
            android:hint="@string/eText_addSite_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/tView_addSite_description" />

        <EditText
            android:id="@+id/eText_addSite_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:hint="@string/eText_addSite_description"/>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkBox_addSite_f1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f1" />
                <CheckBox
                    android:id="@+id/checkBox_addSite_f2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f2" />
                <CheckBox
                    android:id="@+id/checkBox_addSite_f3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f3" />
                <CheckBox
                    android:id="@+id/checkBox_addSite_f4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/checkBox_addSite_f5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f5" />
                <CheckBox
                    android:id="@+id/checkBox_addSite_f6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f6" />
                <CheckBox
                    android:id="@+id/checkBox_addSite_f7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_addSite_f7" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/button_addSite_cancel" />
            <Button
                android:id="@+id/button_addSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/button_addSite_add" />
        </LinearLayout>




    </LinearLayout>

</ScrollView>